5-tier-application+ingres/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-ingress
  labels:
    name: todo-ingress
