5-tier-application+ingres/05-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: todo-ingress
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: todo-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: zahid03/todo-user-service:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
        command: ["sh","-c"]
        args:
        - |
          python manage.py migrate && python manage.py runserver 0.0.0.0:8000
