5-tier-application+ingres/06-tasks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: todo-ingress
spec:
  type: ClusterIP
  selector:
    app: task-service
  ports:
  - port: 8001
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: todo-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
      - name: task-service
        image: zahid03/todo-task-service:latest
        ports:
        - containerPort: 8001
        readinessProbe:
          tcpSocket:
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
