5-tier-application+ingres/07-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: todo-ingress
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: todo-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: zahid03/todo-frontend:latest
        ports:
        - containerPort: 80
